tests/cases/fail/string_equality.p4
def bad() -> string:
    return "x" == "y"
